# ProxLB

./: CHANGELOG.md  Dockerfile  Dockerfile.build  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.changelogs/1.1.12/: 24_fix_crash_on_empty_target_nodes_and_add_unit_tests.yml  31_fix_nested_pools_evaluation.yml
.changelogs/1.1.13/: 100_several.yml  release_meta.yml
.changelogs/1.1.14/: 6_parallel_jobs_issue_fix.yml
.changelogs/2.0.0/: 100_several.yml  release_meta.yml
.changelogs/2.0.1/: 89_remove_deprecated_systemd_unit.yml  91_fix_ssl_ca_bundle_path.yml  release_meta.yml
.changelogs/2.1.0/: 42_add_maintenance_window_support.yml  6-fix-streaming-migration-queue.yml  6_fix_migration_queue_parallel_jobs.yml
.changelogs/2.1.1/: 102-bug-proxlb-210-is-incompatible-with-proxlb-solver-010.yml
.changelogs/2.2.0/: 0-replace-api-secret-at-runtime.yml  11-add-ha-mode-proxlb.yml  release_meta.yml
.github/ISSUE_TEMPLATE/: bug_report.md  (+3 more)
config/: proxlb_example.yaml
debian/: changelog  control  install  pip-constraints.txt  proxlb.maintscript  proxlb.postinst  proxlb.prerm  proxlb.service  proxlb.sysusers  proxlb.tmpfiles  proxlb.triggers  rules  rules.system
docs/: 02_installation.md  03_configuration.md  04_solver.md
misc/: 01-replace-version.sh
proxlb/: __main__.py  main.py
service/: proxlb.service
tests/: test_calculations_get_most_free_node.py  test_calculations_relocate_guests.py  test_calculations_update_node_resources.py  test_maintenance_nodes_schedule.py  test_predictive_check.py  utils.py
tools/: psi_inspect.py
(+30 files in other folders)
